--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">Gateways</string>
 
+    <string name="server_url">https://gateways-c3a50.appspot.com/</string>
+
     <string-array name="Roles">
         <item>Registrar</item>
         <item>Foodie</item>
