--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,7 @@
         <item>Product Launch</item>
         <item>Gaming</item>
         <item>Surprise Event </item>
+        <item>Hackathon</item>
     </string-array>
 
 
